--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="MLG membership card, gamer card generator, trickshot card, custom gamer tag card, MLG meme card, gaming NFT, FaZe card, Call of Duty card, gamer identity card, create gamer tag card, gaming community meme, Dorito sniper, Mountain Dew weapon, quickscope meme card, no scope card maker, twitch gamer card, gamer profile card, 360 noscope card, meme loadout generator, MLG card app" />
+    <meta name="description" content="Join the elite with your own $MLG Membership Card. Customize your gamer tag, meme weapon, and signature skill in seconds. Powered by pure Doritos, Mountain Dew, and trickshot energy. Noobs need not apply." />
     <title>$MLG Membership Card</title>
   </head>
   <body>
